--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     width: 100vw;
     
 }
+
 .nav-bar-profile{
     font-size: 17px;
     margin-top: 20px;
@@ -1801,7 +1802,12 @@ li {
         justify-content: center;
         width: 725px;
     }
-
+    #footer{
+        width: 1285px;
+        margin-top: 100px;
+        display: flex;
+        justify-content: center;
+    }
 
     /* ------------------------------------------------- */
     /* profile page */
@@ -2595,7 +2601,7 @@ li {
 /* For Tablets and Larger smartphones */
 
 
-@media only screen and (max-width:768px) and (min-width:481px) {
+@media only screen and (max-width:769px) and (min-width:481px) {
     .nav-bar {
         font-size: 20px;
         margin-top: -100px;
@@ -3255,8 +3261,6 @@ service page */
     background-image: linear-gradient(to bottom right, #313131, #131313);
     border-radius: 20px;
     display: block;
-    /* padding-top: 6px; */
-    /* display: flex; */
 }
 #service-heading-1 {
     color: var(--gray-color);
@@ -3340,5 +3344,184 @@ service page */
     margin-top: -250px;
     margin-left: 685px;
     display: block;
+}
+}
+
+
+
+/* For Small Laptops and Large tablets*/
+
+
+@media only screen and (max-width:1366px) and (min-width:769px) {
+
+
+
+    /* ------------------------------------------------------------------------------------------------------ 
+    Home page*/
+    .nav-bar {
+        font-size: 17px;
+        margin-top: -80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        position: absolute;
+    }
+    .first-row {
+        display: flex;
+        margin-left: 0px;
+        margin-top: 100px;
+        column-gap: 15px;
+        width: 100%;
+        justify-content: center;
+    }
+    .second-row {
+        display: flex;
+        margin-left: 0px;
+        margin-top: 20px;
+        column-gap: 15px;
+        width: 100%;
+        justify-content: center;
+    }
+    .third-row {
+        display: flex;
+        margin-left: 0px;
+        margin-top: 20px;
+        column-gap: 15px;
+        width: 100%;
+        justify-content: center;
+    }
+
+
+        /* ------------------------------------------------------------------------------------------------------ 
+    profile page */
+
+    .first-row-profile {
+        display: flex;
+         margin-top: 50px;
+         gap: 20px;
+         justify-content: center;
+         width: 100%;
+     }
+     .profile-photo {
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         height: 370px;
+         width: 361px;
+         border-radius: 30px;
+         margin-left: 0px;
+         background-image: linear-gradient(to bottom right, #202020, #131313);
+     }
+     #self-summary {
+         color: #ffffff;
+         font-size: 74px;
+         font-weight: 600;
+         text-transform: uppercase;
+         letter-spacing: -01px;
+         display: flex;
+         gap: 5px;
+         justify-content: center;
+         align-items: center;
+         height: fit-content;
+         margin-left: 100px;
+     }
+     .summary {
+         margin-left: -660px;
+         margin-top: 110px;
+      }
+     .second-row-profile {
+         margin-top: 20px;
+     }
+
+     /* --------------------------------------------------------------------------------------------------------------------- */
+
+    /* Credential page */
+    .first-row-credentials {
+        display: flex;
+        margin-top: 100px;
+        margin-left: 0px;
+        justify-content: center;
+    }
+
+
+     /* --------------------------------------------------------------------------------------------------------------------- */
+
+    /* Blog page */
+
+
+#blog-blogs-main {
+    width: 1060px;
+    height: 800px;
+    margin-left: 150px;
+    margin-top: 100px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 30px;
+    visibility: visible;
+}
+.nav-bar-blogs {
+    display: flex;
+    column-gap: 50px;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    color: white;
+    margin-top: 40px;
+    writing-mode: vertical-lr;
+    margin-left: 30px;
+    position: fixed;
+}
+#blog-photographs-main {
+    display: none;
+    width: 1060px;
+    height: 800px;
+    margin-left: 150px;
+    margin-top: 100px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 30px;
+    visibility: hidden;
+}
+#blog-thoughts-main {
+    display: none;
+    width: 1060px;
+    height: 800px;
+    margin-left: 150px;
+    margin-top: 100px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    border-radius: 30px;
+    visibility: hidden;
+}
+
+
+
+
+/* ----------------------------------------------------------------------------------------------------------------------
+Project page */
+.coming-soon-div{
+    margin-top: 100px;
+}
+
+
+/*  ----------------------------------------------------------------------------------------------------------------------
+servicecs page  */
+.first-row-services {
+    margin-left: 90px;
+}
+.credentials-services{
+    margin-left: 90px;
+}
+.connect-services{
+    margin-left: 410px;
+}
+.social-profiles-services-service-page{
+    margin-left: 975px;
+}
+
+
+/* ----------------------------------------------------------------------------------------------------------------------
+contact page */
+
+.first-row-contact {
+    margin-left: 100px;
 }
 }
