--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 body {
     background-color: var(--background-color);
-
+overflow-x: hidden;
 }
 
 .nav-bar {
@@ -1100,7 +1100,7 @@ li {
     color: var(--gray-color);
     font-size: 13px;
 }
-
+/* --------------------------------------------------------------------------------------------------------------- */
 #coming-soon {
     font-size: 50px;
     color: var(--white-color);
@@ -1153,6 +1153,115 @@ li {
 }
 
 
+#story-boarding-text{
+    margin-top: 50px;
+    font-size: 30px;
+    color: #ffffff;
+    margin-left: 40px;
+}
+#story-boarding-subtext{
+    font-size: 15px;
+    color: #ffffff;
+    margin-left: 40px;
+}
+#script{
+    margin-top: -50px;
+    color: white;
+    font-size: 25px;
+}
+#scriptname{
+    color: white;
+    font-size: 30px;
+    margin-top: 50px;
+    margin-left: -140px;
+}
+.project1 {
+    height: 400px;
+    margin-top: 50px;
+    margin-left: 40px;
+    width: 1350px;
+    background-image: linear-gradient(to bottom right, #202020, #131313);
+    display: flex;
+    column-gap: 50px;
+    padding-left: 50px;
+    overflow-x: scroll;
+    align-items: center;
+    white-space: nowrap;
+    padding-right: 50px;
+}
+
+.scene {
+    height: 300px;
+    width: 400px;    
+    background-color: white;
+    flex: 0 0 auto;
+    position: relative; /* Ensure button positions relative to scene */
+    cursor: pointer; /* Add cursor pointer to indicate clickable */
+}
+
+.scene img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.scene img:hover {
+    opacity: 0.5;
+}
+
+.view-button {
+    display: none; /* Initially hide the button */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.scene:hover .view-button {
+    display: block; /* Show the button on image hover */
+}
+
+.fullscreen-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    justify-content: center;
+    align-items: center;
+}
+
+.fullscreen-overlay.active {
+    display: flex;
+}
+
+.fullscreen-overlay img {
+    max-width: 90%;
+    max-height: 90%;
+}
+
+.close-icon {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+}
+
+
+#project-image{
+    height: 300px;
+    width: 400px;    
+}
 /* ------------------------------------------------------------------------------------------------------------- */
 
 .first-row-services {
@@ -2008,7 +2117,45 @@ li {
         margin-top: 120%;
         margin-left: 35%;
     }
-
+    #story-boarding-text {
+        margin-top: 80px;
+        font-size: 80px;
+        color: #ffffff;
+        margin-left: 60px;
+        width: 630px;
+    }
+    
+    #story-boarding-subtext {
+        font-size: 35px;
+        color: #ffffff;
+        margin-left: 60px;
+        width: 1020px;
+    }
+    .project1 {
+        height: 1400px;
+        margin-top: 100px;
+        margin-left: 60px;
+    
+    }
+    #script {
+        margin-top: -50px;
+        color: white;
+        font-size: 65px;
+    }
+    #scriptname {
+        color: white;
+        font-size: 75px;
+        margin-top: 180px;
+        margin-left: -280px;
+    }
+    .scene {
+        height: 1150px;
+        width: 1050px;
+        background-color: white;
+        flex: 0 0 auto;
+        position: relative;
+        cursor: pointer;
+    }
     .container {
         display: flex;
         justify-content: center;
@@ -3076,6 +3223,10 @@ Project page  */
    
     margin-top: 100px;
 }
+#story-boarding-text {
+    margin-top: 100px;
+}
+
 /* --------------------------------------------------------------------------------------------------------
  Contact page*/
  .first-row-contact {
