--- a/style.css
+++ b/style.css
@@ -3654,7 +3654,9 @@ Project page */
 .coming-soon-div{
     margin-top: 100px;
 }
-
+#story-boarding-text{
+    margin-top: 100px;
+}
 
 /*  ----------------------------------------------------------------------------------------------------------------------
 servicecs page  */
