--- a/style.css
+++ b/style.css
@@ -3657,6 +3657,9 @@ Project page */
 #story-boarding-text{
     margin-top: 100px;
 }
+.project1{
+    width: 1100px;
+}
 
 /*  ----------------------------------------------------------------------------------------------------------------------
 servicecs page  */
