--- a/style.css
+++ b/style.css
@@ -3857,7 +3857,7 @@ service page */
     #blog-photographs-main {
         display: none;
         width: 1060px;
-        height: 800px;
+        height: 1100px;
         margin-left: 150px;
         margin-top: 100px;
         background-image: linear-gradient(to bottom right, #202020, #131313);
@@ -3875,8 +3875,23 @@ service page */
         border-radius: 30px;
         visibility: hidden;
     }
+    .photography-tagline{
+        width: 950px;
+    }
 
+.first-row-photography{
+    margin-left: -830px;
+}
+.second-row-photography{
+    margin-left: -1080px;
+}
+.third-row-photography{
+    margin-left: -1000px;
+}
 
+.images{
+    width: 310px;
+}
 
 
 
