--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ marquee {
 
 #blog-blogs-main {
     width: 1250px;
-    height: 800px;
+    height: 930px;
     margin-left: 150px;
     margin-top: 80px;
     background-image: linear-gradient(to bottom right, #202020, #131313);
@@ -360,6 +360,7 @@ marquee {
     margin-top: 50px;
     margin-left: 46px;
     height: fit-content;
+    width: fit-content;
 }
 
 .photography-tagline {
@@ -379,37 +380,89 @@ marquee {
     height: 250px;
     width: 1150px;
     flex-wrap: wrap;
-    
+
 }
+
 .second-row-photography {
     margin-top: 500px;
     margin-left: -1150px;
     display: flex;
     column-gap: 20px;
     height: 250px;
-    width: 1150px; 
-    flex-wrap: wrap;   
+    width: 1150px;
+    flex-wrap: wrap;
 }
+
 .third-row-photography {
     margin-top: 800px;
     margin-left: -1150px;
     display: flex;
     column-gap: 20px;
     height: 250px;
-    width: 1150px;    
+    width: 1150px;
     flex-wrap: wrap;
 }
+.blogs-headings-blog{
+    color: var(--white-color);
+    font-size: 30px;
+    margin-top: 50px;
+    margin-left: 46px;
+    height: fit-content;
+    width: 350px;
+}
+.first-row-blog {
+    margin-top: 150px;
+    margin-left: -350px;
+    display: flex;
+    column-gap: 20px;
+    height: fit-content;
+    width: fit-content;
+    
 
+}
 
-.images{
+.second-row-blog {
+    margin-top: 520px;
+    margin-left: -1150px;
+    display: flex;
+    column-gap: 20px;
+    height: fit-content;
+    width: fit-content;
+}
+
+.third-row-blog {
+    margin-top: 900px;
+    margin-left: -1150px;
+    display: flex;
+    column-gap: 20px;
+    height: 250px;
+    width: fit-content;
+}
+
+.blogs {
+    width: 370px;
+    height: 350px;
+    overflow-x: scroll;
+    overflow-y: scroll;
+    border: 1px solid gray;
+    color: white;
+    border-radius: 10px;
+}
+pre{
+    font-size: 16px;
+}
+
+.images {
     height: 250px;
     width: 370px;
 }
+
 .images img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 /* services-section */
 .services {
     height: 250px;
@@ -2150,7 +2203,7 @@ li {
         margin-top: 310px;
         margin-left: 60px;
         width: 1160px;
-        height: 2000px;
+        height: 6600px;
     }
 
     #blog-photographs-main {
@@ -2169,7 +2222,8 @@ li {
 
     .blogs-headings {
         font-size: 80px;
-       }
+    }
+
     .photography-tagline {
         margin-top: 180px;
         margin-left: -510px;
@@ -2179,6 +2233,7 @@ li {
         display: block;
         font-size: 40px;
     }
+
     .first-row-photography {
         margin-top: 320px;
         margin-left: -1040px;
@@ -2188,27 +2243,62 @@ li {
         width: 1160px;
         flex-wrap: wrap;
     }
+
     .second-row-photography {
-        margin-top:3130px;
+        margin-top: 3130px;
         display: flex;
         row-gap: 20px;
         height: 690px;
         width: 1160px;
         flex-wrap: wrap;
     }
+
     .third-row-photography {
         margin-top: 5925px;
-        
+
         display: flex;
         row-gap: 20px;
         height: 690px;
         width: 1160px;
         flex-wrap: wrap;
     }
-    .images{
+
+    .images {
         width: 1080px;
         height: auto;
         margin-top: 100px;
+    }
+    .blogs-headings-blog {
+       
+        font-size: 70px;
+        
+    }
+    .first-row-blog{
+        flex-wrap: wrap;
+        margin-left: -180px;
+    }
+    .second-row-blog {
+        flex-wrap: wrap;
+        margin-left: -1050px;
+        margin-top: 3320px;
+    }
+    .third-row-blog{
+        flex-wrap: wrap;
+margin-left: -1090px;
+        margin-top: 6500px;
+    }
+    .blogs {
+        display: flex;
+        width: 1050px;
+        height: 950px;
+        overflow-x: scroll;
+        overflow-y: scroll;
+        border: 1px solid gray;
+        margin-top: 100px;
+        font-style: 50px;
+    }
+    pre{
+        font-size: 50px;
     }
     /* ----------------------------------------------------------------- */
 
@@ -3394,7 +3484,7 @@ li {
         visibility: visible;
     }
 
-  
+
     .nav-bar-blogs {
         font-size: 25px;
     }
@@ -3875,23 +3965,26 @@ service page */
         border-radius: 30px;
         visibility: hidden;
     }
-    .photography-tagline{
+
+    .photography-tagline {
         width: 950px;
     }
 
-.first-row-photography{
-    margin-left: -830px;
-}
-.second-row-photography{
-    margin-left: -1000px;
-}
-.third-row-photography{
-    margin-left: -1000px;
-}
+    .first-row-photography {
+        margin-left: -830px;
+    }
 
-.images{
-    width: 310px;
-}
+    .second-row-photography {
+        margin-left: -1000px;
+    }
+
+    .third-row-photography {
+        margin-left: -1000px;
+    }
+
+    .images {
+        width: 310px;
+    }
 
 
 
