--- a/style.css
+++ b/style.css
@@ -3923,7 +3923,7 @@ service page */
 
     #blog-blogs-main {
         width: 1060px;
-        height: 800px;
+        height: 910px;
         margin-left: 150px;
         margin-top: 100px;
         background-image: linear-gradient(to bottom right, #202020, #131313);
@@ -3986,7 +3986,12 @@ service page */
         width: 310px;
     }
 
-
+    .blogs{
+        width: 310px;
+    }
+    .second-row-blog{
+        margin-left: -970px;
+    }
 
     /* ----------------------------------------------------------------------------------------------------------------------
 Project page */
