--- a/style.css
+++ b/style.css
@@ -2856,6 +2856,7 @@ margin-left: -1090px;
 
     .first-row-contact {
         display: block;
+        margin-left: 190px;
     }
 
     .contact-informations {
